--- a/HTML/FourthHtml.html
+++ b/HTML/FourthHtml.html
@@ -8,6 +8,12 @@
     
 </head>
 <body>
+  <ul>
+    <li><a href="#home" class="active">Home</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
+  </ul>
     <table id="customer">
         <tr>
             <th>Company</th>
