--- a/HTML/FourthHtml.html
+++ b/HTML/FourthHtml.html
@@ -14,6 +14,7 @@
     <li><a href="#contact">Contact</a></li>
     <li><a href="#about">About</a></li>
   </ul>
+  <img src= "../Images/image0001.jpg" alt="Company" style="width: 50%;"></img>
     <table id="customer">
         <tr>
             <th>Company</th>
