--- a/HTML/NewsWebsite.html
+++ b/HTML/NewsWebsite.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../CSS/news.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/verticalmenu.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/horizontalmenu.css" media="screen">
 </head>
+
 <body>
-    <ul id="menu">
-        <li><a href="#home" class="active">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#content">Content</a></li>
-        <li><a href="#about">About</a></li>
-    </ul>
+    <div class="vertical">
+        <ul id="menu">
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#content">Content</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+    </div>
+    <div class="main">
+        <ul id="verticalList">
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#content">Content</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+    </div>
+
+
+
 </body>
+
 </html>
