--- a/HTML/ResponsiveMenu.html
+++ b/HTML/ResponsiveMenu.html
@@ -33,7 +33,7 @@
             background-color:#4CAF50;
             color:white;
         }
-        ul.sidenav li a:hover:not(.active){
+        ul.sidenav li a:hover:not(.active), .dropdown:hover .dropbtn{
             background-color: grey;
             color: white;
         }
@@ -41,7 +41,37 @@
             margin-left: 25%;
             padding: 1px 16px;
             height: 1000px;
+            z-index: -1;
         }
+        .dropbtn{
+            display: inline-block;
+            color:white;
+            text-align: left;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        .dropdown-content{
+            display:none;
+            position: absolute;            
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+        .dropdown-content a{
+            color: black;
+            padding: 12px 16px;            
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+        .dropdown-content a:hover{
+            background-color: #f1f1f1;
+        }
+        .dropdown:hover .dropdown-content{
+            display: block;
+        }
+        
         @media screen and (max-width: 900px){
             ul.sidenav{
                 width:100%;
@@ -54,6 +84,7 @@
             }
             div.content{
                 margin-left: 0;
+                
             }
         }
         @media screen and (max-width: 400px){
@@ -70,7 +101,13 @@
         <li><a class="active" href="#home">Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
+        <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">About</a>
+            <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </div>
+        </li>
     </ul>
     <div class="content">
         <h2>This is a header</h2>
