--- a/HTML/FirstForm.html
+++ b/HTML/FirstForm.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/79f8afad0c.js" crossorigin="anonymous"></script>
     <style>
         .form-container{
             box-sizing: border-box;
@@ -42,12 +43,38 @@
         input[type="submit"]:hover{
             background-color:#45a049;
         }
-
+        div.searchbox-container{
+            width:50%;
+            margin:auto;            
+        }
+        #srbox{
+            width:130px;
+            box-sizing: border-box;
+            border: 2px solid #ccc;
+            font-size: 1em;
+            background-color: white;
+            background-image: url("../Images/search.png");
+            background-repeat: no-repeat;
+            background-size: 1.8em;
+            background-position: left center;
+            background-position-x: 12px;
+            outline: 0;
+            padding-left: 3em;
+            transition: width 0.4s ease-in-out;
+        }
+        #srbox:focus{
+            width: 100%;
+        }
 
     </style>
 </head>
 <body>
     <h2>New form exercise</h2>
+    <div class="searchbox-container">
+        <form>
+            <input type="text" id="srbox" name="searchbox" placeholder="Search..">
+        </form>
+    </div>
     <div class="form-container">
         <form>
             <span>First Name</span><br>
