--- a/HTML/Tooltips.html
+++ b/HTML/Tooltips.html
@@ -21,14 +21,28 @@
             bottom: 100%;
             left:50%;
             margin-left: -60px;
-
+            opacity: 0;
+            transition: opacity 0.5s;
             position: absolute;
             z-index: 1;
         }
         .tooltip:hover .tooltiptext{
             visibility: visible;
+            opacity: 1.0;
             
         }
+        .tooltip .tooltiptext::after{
+            content:" ";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: black transparent transparent transparent;
+
+        }
+        .tooltip .tooltiptext
     </style>
 </head>
 
