--- a/HTML/Tooltips.html
+++ b/HTML/Tooltips.html
@@ -65,13 +65,41 @@
         .gallery div{  
             margin: 0 1.66%;                     
             float:left;
-            width:30%;
-                       
+            width:30%;    
+            transition: opacity 0.2s;                   
+        }
+        .gallery div:hover{
+            opacity: 0.92;
+            cursor: pointer;
         }
         .gallery div img{            
             width: 100%;
             height: auto;
-            box-shadow: 0px 8px 16px 0px black;              
+            box-shadow: 0px 8px 16px 0px black;   
+            border-radius: 7px;           
+        }
+        .center{
+            text-align: center;
+            margin-top: 30px;
+        }
+        .pagination{
+            display: inline-block;
+        }
+        .pagination a{
+            color: black;
+            text-decoration: none;
+            float:left;
+            padding: 8px 16px;
+            border: 1px solid #ddd;
+            margin: 0 3px;
+            transition: background-color 0.3s;
+            border-radius: 3px;
+        }
+        .pagination a:hover:not(.active){
+            background-color: rgb(184, 179, 179);
+        }
+        .active{
+            background-color:#4CAF50;
         }
         @media only screen and (max-width: 400px) {
             .gallery div{                
@@ -101,6 +129,20 @@
         <div class="rightImg">
             <img src="../Images/lights600x400.jpg">
         </div>
+    </div>
+
+    <div class="center">
+        <div class="pagination">
+            <a href="#">&laquo;</a>
+            <a href="#">1</a>
+            <a href="#" class ="active">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">6</a>
+            <a href="#">7</a>
+            <a href="#">&raquo;</a>
+        </div> 
     </div>
 </body>
 
