--- a/HTML/FirstForm.html
+++ b/HTML/FirstForm.html
@@ -92,6 +92,9 @@
             <input type="submit" value="Submit">
         </form>
     </div>
+    <script>    
+        alert("(![]+[])[+[]]+(![]+[])[+!+[]]+([![]]+[][[]])[+!+[]+[+[]]]+(![]+[])[!+[]+!+[]]");
+    </script>
     
     
 </body>
