--- a/HTML/DOMAnimations.html
+++ b/HTML/DOMAnimations.html
@@ -59,7 +59,7 @@
             }            
         }
         function myAlert(){
-            alert ("U have clicked the button!");
+            alert ("U have clicked the button! yeah");
         }
         
         var x = document.getElementById("activebutton");
